syntax = "proto3";

package proto.v1;

message GetUserResponse {
    string name = 1;
    string email = 2;
}

message GetUserRequest {
    string id = 1;
}

message UpdateUserResponse {
    string message = 1;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};
}